k8s/ta-deploy/templates/v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydata-v1
  labels:
    app: mydata
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydata
      version: v1
  template:
    metadata:
      labels:
        app: mydata
        version: v1
    spec:
      containers:
      - image: hilmiraditya/ta-deploy:temp
        name: ta-deploy
        ports:
        - containerPort: 80
