k8s/ta-deploy/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mydata-vs
spec:
  hosts:
  - "*"
  gateways:
  - mydata-gateway
  http:
  - route:
      - destination:
          host: mydata
          subset: v1
          port:
            number: 80
        mirror:
          host: mydata
        mirror_percent: 100
